# nestpy

./: .bumpversion.cfg  .cproject  .gitignore  .gitmodules  .project  .travis.yml  AUTHORS.md  Benchmark_Tutorials.ipynb  CMakeLists.txt  HISTORY.md  HISTORY.rd  MANIFEST.in  README.md  benchmark_plots.py  how_to_maintain.ipynb  interaction_keys.py  pyproject.toml  requirements.txt  setup.py  sync.sh  travis.yml  vectorized_yields.py
.github/scripts/: setup-osx.sh
.github/workflows/: pypi_install.yml  test_package.yml
conda.recipe/: meta.yaml
examples/: demo_v0.ipynb
include/: array.hh  detector.hh  spectra.hh
lib/pybind11/docs/: requirements.txt
nest_local_flask/: benchmark_plots.py  main.py  text.txt
nestpy/nestpy.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/: bindings.cpp  helpers.py
src/nestpy/: GammaHandler.cpp  GammaHandler.hh  LUX_Run03.hh  NEST.cpp  NEST.hh  RandomGen.cpp  RandomGen.hh  TestSpectra.cpp  TestSpectra.hh  VDetector.cpp  VDetector.hh  ValidityTests.hh  __init__.py  analysis.hh  array.cpp  bindings.cpp  detector.cpp  execNEST.cpp  helpers.py  interaction_keys.py  math.cpp  spectra.cpp  testNEST.cpp  testNEST.hh  vectorized_yields.py
src/nestpy.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: NEST.py  core_nest_tests.py  debug_tests.py  example_tests.py  math_test.py
travis/: Dockerfile  build-wheels.sh  setup-osx.sh
tutorials/: benchmark_plots.py  how_to_maintain.ipynb  nestpy_tutorial.ipynb
tutorials/arxiv/: benchmark_plots.py  how_to_maintain.ipynb  nestpy_tutorial.ipynb  setup_notebook.py
