[build-system]
requires = [
    "scikit-build-core==0.11.6",
    "pybind11>=2.10"
]
build-backend = "scikit_build_core.build"

[project]
name = "nestpy"
version = "2.0.6"
description = "Python bindings for the NEST noble element simulation"
authors = [
    {name = "Sam Eriksen", email = "sam.eriksen@bristol.ac.uk"},
    {name = "Greg Rischbieter", email = "rischbie@umich.edu"},
    {name = "Nicholas Carrara", email = "ncarrara.physics@gmail.com"},
    {name = "Sophia Andaloro", email = "sja5@rice.edu"},
    {name = "Christopher Tunnell", email = "tunnell@rice.edu"},
]
readme = "README.md"
license = { file = "LICENSE" }
dependencies = [
    "numpy"
]
classifiers = [
    'Development Status :: 5 - Production/Stable',
    'License :: OSI Approved :: GNU General Public License v3 (GPLv3)',
    'Natural Language :: English',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: C++',
    'Intended Audience :: Science/Research',
    'Programming Language :: Python :: Implementation :: CPython',
    'Topic :: Scientific/Engineering :: Physics',
    'Operating System :: MacOS :: MacOS X',
    'Operating System :: POSIX :: Linux'
]

[tool.scikit-build]
minimum-version = "build-system.requires"

[tool.isort]
profile = "black"
